--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
           <a class="navbar-brand" href="/">
             <span>Bookers</span>
           </a>
+          <div class="d-flex justify-content-center mb-2">
+          <%= render "searches/form" %>
+        </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
